--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -387,18 +387,18 @@
                                     <div class="tab-pane fade show active profile-overview" id="profile-overview">
                                         <div class="row row-cols-lg-1 row-cols-lg-1 row-cols-md-1 row-cols-xl-2">
 
-                                            <ul class="list-group col" style="padding: 0;">
-                                                <li class="list-group-item d-flex justify-content-between align-items-center w-100">
-                                                    Total Project<span class="badge bg-primary rounded-pill text-sm" id="total-project"></span>
-                                                </li> <br/>
-                                                <li class="list-group-item d-flex justify-content-between align-items-center w-100">
-                                                    Total Member<span class="badge bg-primary rounded-pill text-sm" id="total-member"></span>
-                                                </li>
-                                            </ul>
-                                            <div class="col align-self-center">
-                                                <canvas style="max-width: 960px; padding: 0; min-width: 200px"
-                                                        id="department-projects-chart" height="200"></canvas>
+<!--                                            <ul class="list-group row" style="padding: 0;">-->
+<!--                                                -->
+<!--                                            </ul>-->
+
+                                            <div class="list-group-item d-flex justify-content-between align-items-center col-6">
+                                                Total Project<span class="badge bg-primary rounded-pill text-sm" id="total-project"></span>
+                                            </div> <br/>
+                                            <div class="list-group-item d-flex justify-content-between align-items-center col-6">
+                                                Total Member<span class="badge bg-primary rounded-pill text-sm" id="total-member"></span>
                                             </div>
+
+
                                         </div>
                                     </div>
                                     <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
