--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -111,9 +111,27 @@
             <!-- nav for task and gantt chart end -->
             <div class="tab-content position-relative" style="height: 600px" id="myTabContent">
                 <div class="tab-pane fade show active" id="task" role="tabpanel" aria-labelledby="tasks-tab">
-                    <div class="d-flex justify-content-end trash-can-container dummy-trash position-absolute" style="bottom: 100px; right: -20px; width: 60px">
+                    
+                    <!-- <div class="d-flex justify-content-end trash-can-container dummy-trash position-absolute" id="trash-bin" style="bottom: 100px; right: -20px; width: 60px">
                             <span class="trash align-self-end dummy-trash"><span class="dummy-trash"></span></span>
-                    </div>
+                    </div> -->
+                    <script type="module">
+                        import { getUser } from "/js/currentLoginUser.js";
+
+                        const user = await getUser();
+
+                        if(user.currentUser.role === 'PROJECT_MANAGER') {
+                            const trashCanContainer = document.createElement("div")
+                            trashCanContainer.classList = 'd-flex justify-content-end trash-can-container position-absolute dummy-trash'
+                            trashCanContainer.id = 'trash-bin'
+                            trashCanContainer.style = 'bottom: 100px; right: -20px; width: 60px'
+                            trashCanContainer.innerHTML = `
+                            <span class="trash align-self-end dummy-trash"><span class="dummy-trash"></span></span>
+                            `
+                            document.querySelector("#task").appendChild(trashCanContainer)
+                        }
+
+                    </script>
                     <div class="board">
                         <!-- add task form start -->
                         <!-- add task form end -->
