--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -23,7 +23,7 @@
 <div id="spinner"
      class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
     <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-        <span class="sr-only">Loading...</span>
+        <span class="sr-only"></span>
     </div>
 </div>
 <!-- Spinner End -->
@@ -695,7 +695,7 @@
     }
 
     import {getUser} from "/js/currentLoginUser.js";
-    import {getTimeElapsed} from "/js/time.js";
+    import {formatDate,getTimeElapsed} from "/js/time.js";
     import {getData} from "/js/api-function.js";
 
     console.log(await getUser());
@@ -736,7 +736,7 @@
     console.log(currentLoginUserRole)
     console.log(currentLoginUserRole === "FOC")
 
-    if (currentLoginUserRole === 'PROJECT_MANAGER' || currentLoginUserRole === 'SDQC' || currentLoginUserRole === 'PMO') {
+    if (currentLoginUserRole === 'PROJECT_MANAGER') {
         document.querySelector("#issue-link").classList.remove("d-none")
     }
 
@@ -1214,8 +1214,7 @@
                     dataType: 'json',
                     success: function (data) {
                         console.log(data);
-                        showsuccess('Issue Created Successfully');
-                        loadData();
+                        showsuccess('Issue Created Successfully');  
 
                     },
                     error: function (xhr, status, error) {
@@ -1243,16 +1242,6 @@
             }
         }
     });
-
-    function formatDate(timestamp) {
-        // Assuming data.solved_date is a timestamp in milliseconds
-        const date = new Date(timestamp);
-
-        // Format the date as a string (adjust the format as needed)
-        const formattedDate = `${date.toLocaleDateString()} ${date.toLocaleTimeString()}`;
-
-        return formattedDate;
-    }
 
     function createIssueCard(issue) {
         console.log(issue)
@@ -1563,7 +1552,7 @@
         function createPendingIssueCard(issue) {
             console.log(issue)
             const outerDiv = document.createElement("div");
-            outerDiv.classList.add("item-issue-approval");
+            outerDiv.classList.add("item-issue-approval", 'issue-card');
             outerDiv.id = `issueapprovalitem-${issue.id}`;
 
             const approvalContainer = document.createElement("div");
@@ -1776,6 +1765,27 @@
                         console.log("Issue Updated Successfully");
                         // alert("Issue Updated Successfully");
                         showSuccess("Issue Updated Successfuly.");
+                        $.ajax({
+                            url: `/api/issue/list/pending/${getLoginUser.currentUser.id}`, // Update the URL to include the issue ID
+                            type: 'GET',
+                            success: function (data) {
+                                console.log(data);
+                                console.log("Issue Updated Successfully");
+                                // alert("Issue Updated Successfully");
+                                showSuccess("Issue Updated Successfuly.");
+                                const newIssueList = document.getElementById("new-issue-list")
+                                while (document.getElementById("new-issue-list").children.length > 1) {
+                                    newIssueList.removeChild(newIssueList.lastChild);
+                                }
+                                for (let i = data.length - 1; i >= 0; i--) {
+
+                                    const currentIssue = pendingIssueList[i];
+
+                                    newIssueList.appendChild(createPendingIssueCard(currentIssue))
+                                }
+                            },
+
+                        });
                     },
 
                 });
