--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -42,7 +42,7 @@
                         <button class="nav-link active border-primary border border-bottom-0"
                                 id="tasks-tab" data-bs-toggle="tab" data-bs-target="#task"
                                 type="button" role="tab" aria-controls="task" aria-selected="false">
-                            Tasks
+                            <i class="fa-solid fa-list-check"></i>
                             <p style="display:none;" th:text="${projectId}" id="projectId"></p>
                             <p style="display:none;" th:text="${project.getStart_date()}" id="projectStartDate"></p>
                             <p style="display:none;" th:text="${project.getEnd_date()}" id="projectEndDate"></p>
@@ -52,7 +52,7 @@
                         <button class="nav-link border-primary border border-bottom-0 rounded-top"
                                 id="gantt-chart-tab" data-bs-toggle="tab" data-bs-target="#gantt-chart" type="button"
                                 role="tab" aria-controls="gantt-chart" aria-selected="false">
-                            Calendar
+                            <i class="fa-solid fa-calendar-days"></i>
                         </button>
                     </li>
                     <script type="module">
