--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2266,9 +2266,9 @@
                 console.log(selectedProject)
             }
 
-            window.getAllSelectedProjectInfo = getAllSelectedProjectInfo
+            window.getAllSelectedProjectInfo = getAllSelectedProjectInfo // don't delete this 
 
-            window.getAllProjectInfo = getAllProjectInfo;
+            window.getAllProjectInfo = getAllProjectInfo; // don't delete this 
 
             //list project end
             if (loginUser.currentUser.role !== "PROJECT_MANAGER") {
