--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -59,7 +59,7 @@
                 style="width: 3rem; height: 3rem"
                 role="status"
         >
-            <span class="sr-only">Loading...</span>
+            <span class="sr-only"></span>
         </div>
     </div>
     <!-- Spinner End -->
